Update project according to feedbacks.

--- a/projects/finding_donors/finding_donors.ipynb
+++ b/projects/finding_donors/finding_donors.ipynb
@@ -1185,9 +1185,14 @@
    "metadata": {},
    "source": [
     "**Answer: ** \n",
-    "* The algorithm works by divide the training data to several sections and get a model for each section. Then the algorithm carefully combine all the models to reach a optimal state. In this way, we can get a low variance final model. \n",
-    "* It is true that the bias will increase a little bit, but it worth the trade-off. \n",
-    "* Once the model is ready, it can be easily used to predict the classification results. "
+    "* Gradient boosting(GB) works by a mechanism similar to the 'divide and conquer' strategy.\n",
+    "* GB works by the following steps:\n",
+    "    * Randomly group training data points to _n_ groups.\n",
+    "    * Built rules (e.g. decision tree) for each group, hence in total we have _n_ rules.\n",
+    "    * Combine those rules recursively, each time more focus will be allocated to the group that did not perform well.\n",
+    "    * After the combination, a final model that is an ensemble of the _n_ rules will be generated. \n",
+    "* Notice that we can use all the training data points at once and generate _one_ single model, which will have a very high accuracy on the training set (e.g. low bias), but will most likely perform badly when meet new data points (e.g. high variance).\n",
+    "* The GB can essentially reach a good balance between the bias-variance trade-off . \n"
    ]
   },
   {
@@ -1352,7 +1357,9 @@
     "**Answer:**\n",
     "* Education: This is intuitively thinking that more educated people are liekly to get better jobs and have higher pay checks. \n",
     "* Capital gain: More income, more likely to be >50 k. \n",
-    "* Occupation: Some occupations are strong indicators for high income. "
+    "* Capital loss: We also need to consider how much one is losing. The more capital loss one has, the less likely to be >50 k\n",
+    "* Occupation: Some occupations are strong indicators for high income. \n",
+    "* Work class: Work class can be a strong indicator to the income level and therefore associated with the 50 k benchmark.  "
    ]
   },
   {
